--- a/WebContent/media/css/hex.css
+++ b/WebContent/media/css/hex.css
@@ -1,2 +1,3 @@
 body {font-family: arial, verdana, sans-serif}
-label {clear: left}
+ul{list-style: none; margin: .5em 0; padding: 0}
+li{margin:0; padding:0}
