--- a/src/media/css/hex.css
+++ b/src/media/css/hex.css
@@ -1,3 +1,6 @@
-body {font-family: arial, verdana, sans-serif}
+body {color: #000; font-family: arial, verdana, sans-serif}
+body.dark { color: #FFF }
 ul{list-style: none; margin: .5em 0; padding: 0}
 li{margin:0; padding:0}
+a, a:visited{ color: #0000EE }
+.dark a, .dark a:visited{ color: #add8e6 }
