--- a/src/media/css/hex.css
+++ b/src/media/css/hex.css
@@ -5,3 +5,4 @@ ul{list-style: none; margin: .5em 0; padding: 1em; border: solid .2em #000; widt
 li{margin:0; padding:0}
 a, a:visited{ color: #0000EE }
 .dark a, .dark a:visited{ color: #add8e6 }
+footer {display: block;}
